--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="fakebar">
             
         <ul>
-            <li><a >🏠Home</a></li>
+            <li><a  >🏠Home</a></li>
             <li><a >🔍About</a></li>
             <li><a >📟Contact</a></li>
-            <li><a >🚀Profile</a></li>
+            <li><a href="http://127.0.0.1:5500/frontend/logim.html" >🚀Login</a></li>
         </ul>
     </div>
     <h3> 👋 Hello</h3>
