--- a/logim.html
+++ b/logim.html
@@ -18,9 +18,9 @@
             
         <ul>
             <li><a href="http://localhost:3000/">🏠Home</a></li>
-            <li><a >🔍About</a></li>
+            <li><a href="http://127.0.0.1:5500/frontend/aboutus.html" >🔍About</a></li>
             <li><a >📟Contact</a></li>
-            <li><a >🚀Login</a></li>
+            <li><a  >🚀Login</a></li>
         </ul>
     </div>
     <main>
